[package]
name = "mer-de-glace"
version = "0.1.0"
authors = ["filip <fbielejec@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
chrono = "0.4"
env_logger = "^0.8"
flate2 = "1.0.19"
log = "^0.4"
tar = "0.4"
rusoto_core = "0.45.0"
rusoto_glacier = "0.45.0"
tokio = { version = "0.2.22", features = ["full"] }
# ron = "0.6.3"