[package]
name = "mer-de-glace"
version = "0.1.0"
authors = ["filip <fbielejec@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
bytes = "1.0.1"
chrono = "0.4"
env_logger = "^0.8"
flate2 = "1.0.19"
log = "^0.4"
regex = "1.4.3"
rusoto_core = "0.46.0"
rusoto_glacier = "0.46.0"
sha2 = "0.9.2"
tar = "0.4"
tokio = { version = "1.1.0", features = ["full"] }
lazy_static = "1.4.0"